integracion con api mocks para pruebas

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,8 @@ server:
 spring:
   application:
     name: soap-gateway
+  profiles:
+    default: dev
   config:
     import: optional:file:.env[.properties]
 
