--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -27,7 +27,7 @@ bridge-protocols:
       routing:
         strategy: operation-name
       rest:
-        domain-path: ${CLIENTE_SERVICE_URL:http://localhost:8081/api/clientes}
+        domain-path: ${CLIENTE_SERVICE_URL:http://localhost:18081/api/clientes}
         paths:
           - id: endpoint1
             operation: getCliente
@@ -37,6 +37,10 @@ bridge-protocols:
             headers:
               Content-Type: application/json
               Accept: application/json
+              X-Channel: ${soap.header.channel}
+              X-Mock-Variant: ${soap.header.variant}
+              X-Cliente-Id: ${header.clienteId}
+              X-Channel-Legacy: ${header.header.channel}
           - id: endpoint2
             operation: crearCliente
             path: /endpoint2
@@ -45,6 +49,7 @@ bridge-protocols:
             headers:
               Content-Type: application/json
               Accept: application/json
+              X-Mock-Variant: ${soap.header.variant}
           - id: endpoint3
             operation: actualizarCliente
             path: /endpoint1/${header.clienteId}
@@ -52,12 +57,13 @@ bridge-protocols:
             timeout: 6000
             headers:
               Content-Type: application/json
+              X-Mock-Variant: ${soap.header.variant}
       security:
         oauth2:
           enabled: ${DEV_OAUTH2_ENABLED:false}
           client-id: ${DEV_OAUTH2_CLIENT_ID:backend-client}
           client-secret: ${DEV_OAUTH2_CLIENT_SECRET:secret}
-          token-uri: ${DEV_OAUTH2_TOKEN_URI:http://localhost:8090/oauth2/token}
+          token-uri: ${DEV_OAUTH2_TOKEN_URI:http://localhost:18081/oauth2/token}
           scope: ${DEV_OAUTH2_SCOPE:api.read api.write}
         wsSecurity:
           enabled: ${DEV_WS_SECURITY_ENABLED:false}
@@ -86,7 +92,7 @@ bridge-protocols:
       routing:
         strategy: operation-name
       rest:
-        domain-path: ${EMPLEADO_SERVICE_URL:http://localhost:8083/api/empleados}
+        domain-path: ${EMPLEADO_SERVICE_URL:http://localhost:18081/api/empleados}
         paths:
           - id: getEmpleado
             operation: getEmpleado
@@ -95,6 +101,7 @@ bridge-protocols:
             timeout: 4000
             headers:
               Content-Type: application/json
+              X-Mock-Variant: ${soap.header.variant}
           - id: crearEmpleado
             operation: crearEmpleado
             path: /
@@ -102,12 +109,13 @@ bridge-protocols:
             timeout: 5000
             headers:
               Content-Type: application/json
+              X-Mock-Variant: ${soap.header.variant}
       security:
         oauth2:
           enabled: ${DEV_OAUTH2_ENABLED:false}
           client-id: ${DEV_OAUTH2_CLIENT_ID:backend-client}
           client-secret: ${DEV_OAUTH2_CLIENT_SECRET:secret}
-          token-uri: ${DEV_OAUTH2_TOKEN_URI:http://localhost:8090/oauth2/token}
+          token-uri: ${DEV_OAUTH2_TOKEN_URI:http://localhost:18081/oauth2/token}
           scope: ${DEV_OAUTH2_SCOPE:api.read api.write}
         wsSecurity:
           enabled: ${DEV_WS_SECURITY_ENABLED:false}
